# poppy

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  pg_cmds.txt  sqlx-data.json
.github/workflows/: docker-publish.yml  dockerhub.yml
app/: Cargo.toml
app/entities/: Cargo.toml
app/entities/src/: lib.rs
app/server/src/: main.rs
app/web/: Cargo.toml
assets/: elm.json  package-lock.json  package.json
assets/public/: index.html
assets/src/: Graphql.elm  GraphqlClient.elm  Shared.elm
assets/src/Juniper/: Mutation.elm  Object.elm  Query.elm  ScalarCodecs.elm
assets/src/Juniper/Enum/: UserKind.elm
assets/src/Juniper/Object/: Photo.elm  User.elm
assets/src/Pages/: Top.elm  Upload.elm
assets/src/Queries/: PhotosList.elm
client/src/: Shared.elm
client/src/Data/: Photo.elm
client/src/Juniper/: Query.elm  Scalar.elm  Subscription.elm
frontend/: package-lock.json  package.json
frontend/src/: Components.elm
frontend/src/Pages/: Top.elm
landing/: elm.json  package.json
landing/public/: index.html  styles.css
landing/src/: Layout.elm  Transitions.elm
landing/src/Components/: Flower.elm
landing/src/Pages/: Top.elm
migrations/: 20201125002823_create_users_table.sql  20210228112636_create_photo_table.sql
ppy/: Cargo.toml
ppy/entities/: Cargo.toml
ppy/entities/src/: lib.rs
ppy/graphql/: Cargo.toml
ppy/graphql/src/: context.rs  lib.rs  mutation.rs  query.rs  subscription.rs  user.rs
ppy/server/: Cargo.toml
ppy/web/: Cargo.toml
ppy/web/src/: lib.rs
server/: .env  .gitignore  Cargo.toml
server/src/: main.rs
server/src/db/: mod.rs
server/src/entities/: mod.rs
server/src/integration_tests/: setup.rs
src/: config.rs  juniper_warp.rs  main.rs
src/db/: mod.rs
src/entities/: mod.rs
src/graphql/: mod.rs
src/integration_tests/: mod.rs
src/integration_tests/register/: mod.rs
src/repo/: mod.rs
src/result/: mod.rs
src/use_cases/: mod.rs  photo.rs  register.rs  user.rs
