[package]
name = "p_server"
version = "0.1.0"
authors = ["Dan Bruder <danbruder@hey.com>"]
edition = "2018"

[dependencies]
juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"}
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"  }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b", features = ["subscriptions"]}
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"}
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"}

env_logger = "0.8.1"
futures = "0.3.1"
log = "0.4.8"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
warp = "0.2.1"
lazy_static = "1.4.0"
reqwest = "0.10.9"
chrono = "0.4.19"
bigdecimal = "0.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1.0.22"
serde_derive = "1.0.117"
string_template = "0.2.1"
mockito = "0.28.0"
snailquote = "0.3.0"
native-tls = "0.2.6"
tokio = { version = "0.2", features = ["full"]}
sqlx = { version = "0.4.0", features = [ "runtime-tokio-native-tls", "sqlite", "migrate", "uuid", "chrono", "bigdecimal" ] }
async-trait = "0.1.42"
bcrypt = "0.9.0"
