[package]
name = "ppy_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.2"
futures = { version = "=0.3.1" }
log = "0.4.8"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.1"
