[package]
name = "ppy_graphql"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = { version = "=0.3.1" }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper"}
juniper_warp = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
uuid = "0.8.1"
chrono = "0.4.11"
